{
  "version": 4,
  "terraform_version": "1.0.6",
  "serial": 442,
  "lineage": "309b74b9-c612-c80a-9694-4eedf483ca99",
  "resources": [
    {
      "module": "module.dev.module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:052776272001:loadbalancer/app/my-alb/22b8345d6b02d605",
            "arn_suffix": "app/my-alb/22b8345d6b02d605",
            "dns_name": "my-alb-1062080760.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:052776272001:loadbalancer/app/my-alb/22b8345d6b02d605",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-alb",
            "security_groups": [
              "sg-0a1838c35b0586d3d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-025ee572d8939d8d9"
              },
              {
                "subnet_id": "subnet-0466e5c3462d5a3a0"
              }
            ],
            "subnets": [
              "subnet-025ee572d8939d8d9",
              "subnet-0466e5c3462d5a3a0"
            ],
            "tags": {
              "Environment": "Test",
              "Name": "my-alb"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "my-alb"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-0f38d13f03d586e4b",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.dev.module.vpc.aws_subnet.public",
            "module.dev.module.vpc.aws_vpc.this",
            "module.dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.dev.module.alb-sg.aws_security_group.this",
            "module.dev.module.alb-sg.aws_security_group.this_name_prefix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.dev.module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:052776272001:listener/app/my-alb/22b8345d6b02d605/85952a31acaf0412",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:052776272001:targetgroup/pref-2021092619161836770000000b/ae94077a8d5f5834",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:052776272001:listener/app/my-alb/22b8345d6b02d605/85952a31acaf0412",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:052776272001:loadbalancer/app/my-alb/22b8345d6b02d605",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.module.alb-sg.aws_security_group.this",
            "module.dev.module.alb-sg.aws_security_group.this_name_prefix",
            "module.dev.module.alb.aws_lb.this",
            "module.dev.module.alb.aws_lb_target_group.main",
            "module.dev.module.vpc.aws_subnet.public",
            "module.dev.module.vpc.aws_vpc.this",
            "module.dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev.module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:052776272001:targetgroup/pref-2021092619161836770000000b/ae94077a8d5f5834",
            "arn_suffix": "targetgroup/pref-2021092619161836770000000b/ae94077a8d5f5834",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:052776272001:targetgroup/pref-2021092619161836770000000b/ae94077a8d5f5834",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "pref-2021092619161836770000000b",
            "name_prefix": "pref-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "Test",
              "Name": "pref-"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "pref-"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0f38d13f03d586e4b"
          },
          "dependencies": [
            "module.dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.dev.module.alb-sg.aws_security_group.this",
            "module.dev.module.alb-sg.aws_security_group.this_name_prefix",
            "module.dev.module.alb.aws_lb.this",
            "module.dev.module.vpc.aws_subnet.public",
            "module.dev.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.dev.module.alb-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:security-group/sg-0a1838c35b0586d3d",
            "description": "Security group for bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a1838c35b0586d3d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "sg_for_alb-20210926191352196700000005",
            "name_prefix": "sg_for_alb-",
            "owner_id": "052776272001",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_for_alb"
            },
            "tags_all": {
              "Name": "sg_for_alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f38d13f03d586e4b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.dev.module.alb-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-1409257316",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0a1838c35b0586d3d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.module.alb-sg.aws_security_group.this",
            "module.dev.module.alb-sg.aws_security_group.this_name_prefix",
            "module.dev.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev.module.alb-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-2734327753",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a1838c35b0586d3d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.module.alb-sg.aws_security_group.this",
            "module.dev.module.alb-sg.aws_security_group.this_name_prefix",
            "module.dev.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-3485973132",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a1838c35b0586d3d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.module.alb-sg.aws_security_group.this",
            "module.dev.module.alb-sg.aws_security_group.this_name_prefix",
            "module.dev.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev.module.bastion-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:security-group/sg-0db59576daa6b30e8",
            "description": "Security group for bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0db59576daa6b30e8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_for_bastion-20210926191352205100000006",
            "name_prefix": "sg_for_bastion-",
            "owner_id": "052776272001",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_for_bastion"
            },
            "tags_all": {
              "Name": "sg_for_bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f38d13f03d586e4b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.dev.module.bastion-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-858780892",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0db59576daa6b30e8",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.module.vpc.aws_vpc.this",
            "module.dev.module.bastion-sg.aws_security_group.this",
            "module.dev.module.bastion-sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.dev.module.bastion-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-2502231901",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0db59576daa6b30e8",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.module.bastion-sg.aws_security_group.this",
            "module.dev.module.bastion-sg.aws_security_group.this_name_prefix",
            "module.dev.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev.module.db-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:security-group/sg-0abc9f55b55fb7b75",
            "description": "Security group for database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0abc9f55b55fb7b75",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "MySQL/Aurora",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_for_database-20210926191351924000000004",
            "name_prefix": "sg_for_database-",
            "owner_id": "052776272001",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_for_database"
            },
            "tags_all": {
              "Name": "sg_for_database"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f38d13f03d586e4b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.dev.module.db-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-1799552578",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0abc9f55b55fb7b75",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.module.vpc.aws_vpc.this",
            "module.dev.module.db-sg.aws_security_group.this",
            "module.dev.module.db-sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.dev.module.db-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.10.0.0/16"
            ],
            "description": "PostgreSQL",
            "from_port": 5432,
            "id": "sgrule-2718013380",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0abc9f55b55fb7b75",
            "self": false,
            "source_security_group_id": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.module.db-sg.aws_security_group.this",
            "module.dev.module.db-sg.aws_security_group.this_name_prefix",
            "module.dev.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.10.0.0/16"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-3287978726",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0abc9f55b55fb7b75",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.module.db-sg.aws_security_group.this",
            "module.dev.module.db-sg.aws_security_group.this_name_prefix",
            "module.dev.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:internet-gateway/igw-0ec44f9df904387df",
            "id": "igw-0ec44f9df904387df",
            "owner_id": "052776272001",
            "tags": {
              "Name": "vpc-app"
            },
            "tags_all": {
              "Name": "vpc-app"
            },
            "vpc_id": "vpc-0f38d13f03d586e4b"
          },
          "dependencies": [
            "module.dev.module.vpc.aws_vpc.this",
            "module.dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ec44f9df904387df",
            "id": "r-rtb-0ae17fe47367c017b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ae17fe47367c017b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.module.vpc.aws_internet_gateway.this",
            "module.dev.module.vpc.aws_route_table.public",
            "module.dev.module.vpc.aws_vpc.this",
            "module.dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:route-table/rtb-0714a013023425bcf",
            "id": "rtb-0714a013023425bcf",
            "owner_id": "052776272001",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-app-private-us-east-2a"
            },
            "tags_all": {
              "Name": "vpc-app-private-us-east-2a"
            },
            "vpc_id": "vpc-0f38d13f03d586e4b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.module.vpc.aws_vpc.this",
            "module.dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:route-table/rtb-004ee1605c673b376",
            "id": "rtb-004ee1605c673b376",
            "owner_id": "052776272001",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-app-private-us-east-2b"
            },
            "tags_all": {
              "Name": "vpc-app-private-us-east-2b"
            },
            "vpc_id": "vpc-0f38d13f03d586e4b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.module.vpc.aws_vpc.this",
            "module.dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:route-table/rtb-0ae17fe47367c017b",
            "id": "rtb-0ae17fe47367c017b",
            "owner_id": "052776272001",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ec44f9df904387df",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-app-public"
            },
            "tags_all": {
              "Name": "vpc-app-public"
            },
            "vpc_id": "vpc-0f38d13f03d586e4b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.module.vpc.aws_vpc.this",
            "module.dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c2ec9ae9e4fb6c7f",
            "route_table_id": "rtb-0714a013023425bcf",
            "subnet_id": "subnet-0d4628e6214a5b426"
          },
          "dependencies": [
            "module.dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.dev.module.vpc.aws_route_table.private",
            "module.dev.module.vpc.aws_subnet.private",
            "module.dev.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f62746a63e17399",
            "route_table_id": "rtb-004ee1605c673b376",
            "subnet_id": "subnet-0adbf742164e7a5c4"
          },
          "dependencies": [
            "module.dev.module.vpc.aws_route_table.private",
            "module.dev.module.vpc.aws_subnet.private",
            "module.dev.module.vpc.aws_vpc.this",
            "module.dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf145f22028862a4",
            "route_table_id": "rtb-0ae17fe47367c017b",
            "subnet_id": "subnet-025ee572d8939d8d9"
          },
          "dependencies": [
            "module.dev.module.vpc.aws_route_table.public",
            "module.dev.module.vpc.aws_subnet.public",
            "module.dev.module.vpc.aws_vpc.this",
            "module.dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b942c8e2c9a99fe",
            "route_table_id": "rtb-0ae17fe47367c017b",
            "subnet_id": "subnet-0466e5c3462d5a3a0"
          },
          "dependencies": [
            "module.dev.module.vpc.aws_route_table.public",
            "module.dev.module.vpc.aws_subnet.public",
            "module.dev.module.vpc.aws_vpc.this",
            "module.dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:subnet/subnet-0d4628e6214a5b426",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.10.1.0/24",
            "id": "subnet-0d4628e6214a5b426",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "052776272001",
            "tags": {
              "Name": "vpc-app-private-us-east-2a"
            },
            "tags_all": {
              "Name": "vpc-app-private-us-east-2a"
            },
            "vpc_id": "vpc-0f38d13f03d586e4b"
          },
          "dependencies": [
            "module.dev.module.vpc.aws_vpc.this",
            "module.dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:subnet/subnet-0adbf742164e7a5c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.10.2.0/24",
            "id": "subnet-0adbf742164e7a5c4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "052776272001",
            "tags": {
              "Name": "vpc-app-private-us-east-2b"
            },
            "tags_all": {
              "Name": "vpc-app-private-us-east-2b"
            },
            "vpc_id": "vpc-0f38d13f03d586e4b"
          },
          "dependencies": [
            "module.dev.module.vpc.aws_vpc.this",
            "module.dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.dev.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:subnet/subnet-025ee572d8939d8d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.10.101.0/24",
            "id": "subnet-025ee572d8939d8d9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "052776272001",
            "tags": {
              "Name": "vpc-app-public-us-east-2a"
            },
            "tags_all": {
              "Name": "vpc-app-public-us-east-2a"
            },
            "vpc_id": "vpc-0f38d13f03d586e4b"
          },
          "dependencies": [
            "module.dev.module.vpc.aws_vpc.this",
            "module.dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:subnet/subnet-0466e5c3462d5a3a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.10.102.0/24",
            "id": "subnet-0466e5c3462d5a3a0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "052776272001",
            "tags": {
              "Name": "vpc-app-public-us-east-2b"
            },
            "tags_all": {
              "Name": "vpc-app-public-us-east-2b"
            },
            "vpc_id": "vpc-0f38d13f03d586e4b"
          },
          "dependencies": [
            "module.dev.module.vpc.aws_vpc.this",
            "module.dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.dev.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:vpc/vpc-0f38d13f03d586e4b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-03e833c158ff7dcec",
            "default_route_table_id": "rtb-08718f62518ae13fc",
            "default_security_group_id": "sg-0021265dfc608eb56",
            "dhcp_options_id": "dopt-5513733e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f38d13f03d586e4b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08718f62518ae13fc",
            "owner_id": "052776272001",
            "tags": {
              "Name": "vpc-app"
            },
            "tags_all": {
              "Name": "vpc-app"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.dev.module.web-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:security-group/sg-095f041c05eb9e17f",
            "description": "Security group for web servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-095f041c05eb9e17f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "User-service ports",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "All IPV4 ICMP",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "sg_for_apache-20210926191349765000000003",
            "name_prefix": "sg_for_apache-",
            "owner_id": "052776272001",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_for_apache"
            },
            "tags_all": {
              "Name": "sg_for_apache"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f38d13f03d586e4b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.dev.module.web-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-2829087004",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-095f041c05eb9e17f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.module.vpc.aws_vpc.this",
            "module.dev.module.web-sg.aws_security_group.this",
            "module.dev.module.web-sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.dev.module.web-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.10.0.0/16"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-3904506082",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-095f041c05eb9e17f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.module.vpc.aws_vpc.this",
            "module.dev.module.web-sg.aws_security_group.this",
            "module.dev.module.web-sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.10.0.0/16"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-522826129",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-095f041c05eb9e17f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.module.web-sg.aws_security_group.this",
            "module.dev.module.web-sg.aws_security_group.this_name_prefix",
            "module.dev.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.10.0.0/16"
            ],
            "description": "All IPV4 ICMP",
            "from_port": -1,
            "id": "sgrule-3362807180",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "icmp",
            "security_group_id": "sg-095f041c05eb9e17f",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.module.web-sg.aws_security_group.this",
            "module.dev.module.web-sg.aws_security_group.this_name_prefix",
            "module.dev.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev.module.web-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "User-service ports",
            "from_port": 22,
            "id": "sgrule-1064919865",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-095f041c05eb9e17f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.module.vpc.aws_vpc.this",
            "module.dev.module.web-sg.aws_security_group.this",
            "module.dev.module.web-sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    }
  ]
}